[gd_scene load_steps=52 format=2]

[ext_resource path="res://Assets/Hud_passetgers.png" type="Texture" id=1]
[ext_resource path="res://Assets/lock.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Hud.gd" type="Script" id=3]
[ext_resource path="res://Assets/llum_verda.png" type="Texture" id=4]
[ext_resource path="res://Assets/hud_principal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Isometric City Pack/png/people_b_down.png" type="Texture" id=6]
[ext_resource path="res://Assets/Isometric City Pack/png/people_b_up.png" type="Texture" id=7]
[ext_resource path="res://Assets/coin/File19.png" type="Texture" id=8]
[ext_resource path="res://Assets/coin/File20.png" type="Texture" id=9]
[ext_resource path="res://Assets/coin/File18.png" type="Texture" id=10]
[ext_resource path="res://Assets/coin/File12.png" type="Texture" id=11]
[ext_resource path="res://Assets/coin/File14.png" type="Texture" id=12]
[ext_resource path="res://Assets/coin/File15.png" type="Texture" id=13]
[ext_resource path="res://Assets/coin/File16.png" type="Texture" id=14]
[ext_resource path="res://Assets/coin/File13.png" type="Texture" id=15]
[ext_resource path="res://Assets/coin/File17.png" type="Texture" id=16]
[ext_resource path="res://Assets/coin/File21.png" type="Texture" id=17]
[ext_resource path="res://Assets/coin/File28.png" type="Texture" id=18]
[ext_resource path="res://Assets/coin/File23.png" type="Texture" id=19]
[ext_resource path="res://Assets/coin/File24.png" type="Texture" id=20]
[ext_resource path="res://Assets/coin/File26.png" type="Texture" id=21]
[ext_resource path="res://Assets/coin/File22.png" type="Texture" id=22]
[ext_resource path="res://Assets/coin/File25.png" type="Texture" id=23]
[ext_resource path="res://Assets/coin/File27.png" type="Texture" id=24]
[ext_resource path="res://Assets/coin/File1.png" type="Texture" id=25]
[ext_resource path="res://Assets/coin/File2.png" type="Texture" id=26]
[ext_resource path="res://Assets/coin/File3.png" type="Texture" id=27]
[ext_resource path="res://Assets/coin/File5.png" type="Texture" id=28]
[ext_resource path="res://Assets/coin/File6.png" type="Texture" id=29]
[ext_resource path="res://Assets/coin/File7.png" type="Texture" id=30]
[ext_resource path="res://Assets/coin/File8.png" type="Texture" id=31]
[ext_resource path="res://Assets/coin/File4.png" type="Texture" id=32]
[ext_resource path="res://Assets/coin/File9.png" type="Texture" id=33]
[ext_resource path="res://Assets/coin/File10.png" type="Texture" id=34]
[ext_resource path="res://Assets/coin/File11.png" type="Texture" id=35]
[ext_resource path="res://Assets/coin/File29.png" type="Texture" id=36]
[ext_resource path="res://Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=37]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 37 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.298039, 0.298039, 0.298039, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="Theme" id=4]
"/colors/fondo boto" = Color( 0.145098, 0.12549, 0.25098, 1 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="Theme" id=7]
Label/colors/font_color = Color( 0.670588, 0.67451, 0.254902, 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 37 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 37 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 37 )

[sub_resource type="Animation" id=14]
resource_name = "Desapareixer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=16]
size = 24
font_data = ExtResource( 37 )

[node name="Hud" type="Control"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -145.915, -19.71 )
scale = Vector2( 1.17, 1.17 )
texture = ExtResource( 5 )

[node name="Animacio_persona" type="AnimatedSprite" parent="."]
position = Vector2( -852.995, -562 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )

[node name="Animacio_moneda" type="AnimatedSprite" parent="."]
position = Vector2( -529.915, -565 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 9 )

[node name="Diners" type="Label" parent="."]
margin_left = -777.915
margin_top = -589.0
margin_right = -577.915
margin_bottom = -540.0
grow_horizontal = 0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 2

[node name="Punts" type="Label" parent="."]
margin_left = -1084.0
margin_top = -589.0
margin_right = -883.995
margin_bottom = -540.0
grow_horizontal = 0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 2

[node name="Passetgers" type="Control" parent="."]
margin_left = -961.915
margin_top = -155.71
margin_right = -761.915
margin_bottom = 64.29
rect_scale = Vector2( 1.27638, 1.27638 )

[node name="Sprite" type="Sprite" parent="Passetgers"]
position = Vector2( 100, 116 )
scale = Vector2( 0.820446, 0.820446 )
texture = ExtResource( 1 )

[node name="Llum" type="Sprite" parent="Passetgers"]
position = Vector2( 181.764, -25.0709 )
texture = ExtResource( 4 )

[node name="Pos1" type="Position2D" parent="Passetgers"]
position = Vector2( 54, 66 )

[node name="Pos2" type="Position2D" parent="Passetgers"]
position = Vector2( 150, 66 )

[node name="Lock1" type="Button" parent="Passetgers/Pos2"]
margin_left = -40.0
margin_top = -42.0
margin_right = 1460.0
margin_bottom = 1808.0
rect_scale = Vector2( 0.053, 0.046 )
theme = SubResource( 4 )
icon = ExtResource( 2 )

[node name="Preu" type="Label" parent="Passetgers/Pos2"]
margin_left = -34.0
margin_top = 22.0
margin_right = 6.0
margin_bottom = 36.0
theme = SubResource( 7 )
custom_fonts/font = SubResource( 11 )
text = "50"

[node name="Pos3" type="Position2D" parent="Passetgers"]
position = Vector2( 54, 168 )

[node name="Lock2" type="Button" parent="Passetgers/Pos3"]
margin_left = -40.0
margin_top = -42.0
margin_right = 1460.0
margin_bottom = 1808.0
rect_scale = Vector2( 0.053, 0.046 )
theme = SubResource( 4 )
icon = ExtResource( 2 )

[node name="Preu" type="Label" parent="Passetgers/Pos3"]
margin_left = -34.0
margin_top = 22.0
margin_right = 6.0
margin_bottom = 36.0
theme = SubResource( 7 )
custom_fonts/font = SubResource( 12 )
text = "150"

[node name="Pos4" type="Position2D" parent="Passetgers"]
position = Vector2( 150, 168 )

[node name="Lock3" type="Button" parent="Passetgers/Pos4"]
margin_left = -40.0
margin_top = -42.0
margin_right = 1460.0
margin_bottom = 1808.0
rect_scale = Vector2( 0.053, 0.046 )
theme = SubResource( 4 )
icon = ExtResource( 2 )

[node name="Preu" type="Label" parent="Passetgers/Pos4"]
margin_left = -34.0
margin_top = 22.0
margin_right = 6.0
margin_bottom = 36.0
theme = SubResource( 7 )
custom_fonts/font = SubResource( 13 )
text = "400"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Desapareixer = SubResource( 14 )
anims/RESET = SubResource( 15 )

[node name="Clients" type="Control" parent="."]
margin_left = -633.915
margin_top = 468.29
margin_right = 6.08496
margin_bottom = 528.29
rect_scale = Vector2( 2, 2 )

[node name="Pos1" type="Position2D" parent="Clients"]
position = Vector2( 32, 32 )

[node name="Pos2" type="Position2D" parent="Clients"]
position = Vector2( 96, 32 )

[node name="Pos3" type="Position2D" parent="Clients"]
position = Vector2( 160, 32 )

[node name="Pos4" type="Position2D" parent="Clients"]
position = Vector2( 224, 32 )

[node name="Pos5" type="Position2D" parent="Clients"]
position = Vector2( 288, 32 )

[node name="Pos6" type="Position2D" parent="Clients"]
position = Vector2( 352, 32 )

[node name="Pos7" type="Position2D" parent="Clients"]
position = Vector2( 416, 32 )

[node name="Pos8" type="Position2D" parent="Clients"]
position = Vector2( 480, 32 )

[node name="Pos9" type="Position2D" parent="Clients"]
position = Vector2( 544, 32 )

[node name="Pos10" type="Position2D" parent="Clients"]
position = Vector2( 608, 32 )

[node name="Velocitat" type="Label" parent="."]
margin_left = -892.0
margin_top = 160.0
margin_right = -772.0
margin_bottom = 185.0
grow_horizontal = 2
custom_fonts/font = SubResource( 16 )
text = "0"
align = 1
uppercase = true

[connection signal="button_down" from="Passetgers/Pos2/Lock1" to="." method="_on_Lock1_button_down"]
[connection signal="button_down" from="Passetgers/Pos3/Lock2" to="." method="_on_Lock2_button_down"]
[connection signal="button_down" from="Passetgers/Pos4/Lock3" to="." method="_on_Lock3_button_down"]
